# rhythm

./: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  refactor_plan.md  refactor_plan_advanced.md  spec_simplification_spec.md  tsconfig.json  tsconfig.plugins.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/api/: __init__.py  main.py  pyproject.toml
apps/api/dto/: request.py  response.py
apps/api/gateway/: core_client.py
apps/api/infra/: logger.py
apps/api/routes/: artifacts.py  chat.py  config.py  sessions.py  workflows.py  workspace.py
apps/desktop/src-tauri/: 2  Cargo.toml
core/: __init__.py  ipc_server.py  pyproject.toml
core/agents/: base_agent.py  primary_agent.py  sub_agent.py
core/artifacts/: __init__.py  artifact_service.py
core/capabilities/: capability.py
core/capabilities/workflow/: engine.py  models.py  worker.py  workflow_capability.py
core/infra/: __init__.py  config.py  config_manager.py
core/llm/: __init__.py  client.py  model_router.py
core/memory/: __init__.py  project_store.py  session_store.py
core/orchestrator/: __init__.py  contracts.py  planner.py  runtime.py
core/project/: workspace.py
core/tool_use/: __init__.py  executor.py  result_normalizer.py  tool_registry.py
core/tools/builtin/: __init__.py  io.py
core/tools/mcp/: __init__.py  mcp_adapter.py  mcp_client.py
core/tools/skills/: __init__.py  skill_adapter.py  skill_registry.py
src-tauri/: Cargo.toml  agent_test_result.md  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
src-tauri/src/agents/: mod.rs  spec.rs
src-tauri/src/app/: bootstrap.rs  mod.rs
src-tauri/src/commands/: chat.rs  cron.rs  interrupt.rs  llm.rs  memory.rs  mod.rs  plugins.rs  session.rs  settings.rs  slash.rs  swarm.rs  workspace.rs
src-tauri/src/coordinator/: agent_definition.rs  coordinator_mode.rs  mod.rs
src-tauri/src/core/: agent_loop.rs  llm_client.rs  mod.rs  models.rs  state.rs
src-tauri/src/cron/: mod.rs  registry.rs  runner.rs  scheduler.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/engine/: agent_loop.rs  compactor.rs  context.rs  mod.rs  query_engine.rs  stream_events.rs
src-tauri/src/hooks/: events.rs  executor.rs  loader.rs  mod.rs  types.rs
src-tauri/src/infra/: database.rs  event_bus.rs  mod.rs
src-tauri/src/infrastructure/: config.rs  database.rs  (+4 more)
(+857 files in other folders)
