[project]
name = "rhythm-core"
version = "0.1.0"
description = "Rhythm core orchestrator runtime"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.52.2"
]

[tool.setuptools.packages.find]
include = ["core*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
