[project]
name = "rhythm-api"
version = "0.1.0"
description = "Rhythm API gateway"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]

[tool.setuptools.packages.find]
include = ["routes*", "dto*", "gateway*", "infra*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
