[package]
name = "rhythm-desktop"
version = "0.1.0"
description = "Rhythm Desktop Application"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
